--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <div id="contenedor-form">  <!-- form --------------------------------------------------------------------------------------------------------------------------------------------------------------------->
                 <div class="col-md-8">
                     <h3>Send Me a Message</h3>
-                    <form id="form-contact" method="post" class="cont clearfix ts-form ts-form-email"  data-php-path="assets/php/email.php">
+                    <form id="form-contact" action="" method="post" class="cont clearfix ts-form ts-form-email"  data-php-path="assets/php/email.php">
                         <div class="row">
                             <div class="col-md-6 col-sm-6">
                                 <div class="form-group">
